--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "uuid": "^11.1.0",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.26.0",
+    "xlsx": "^0.18.5"
   },
   "description": ""
 }
